# software-factory

./: .gitignore  Containerfile  README.md  factory-config.json  pyproject.toml
pipelines/: dark_factory.dot  dark_factory_sequential.dot
presets/: c.containerfile  go.containerfile  python.containerfile  rust.containerfile
scripts/: run-factory.sh
src/attractor/: __init__.py  cli.py
src/attractor/agent/: __init__.py  environment.py  events.py  session.py
src/attractor/agent/tools/: __init__.py  core.py  profiles.py  registry.py
src/attractor/engine/: __init__.py  conditions.py  context.py  executor.py  graph.py  parser.py  pipeline.py  stylesheet.py  validation.py
src/attractor/engine/handlers/: __init__.py  base.py  codergen.py  conditional.py  exit.py  fan_in.py  parallel.py  start.py  tool_handler.py  wait_human.py
src/attractor/factory/: __init__.py  config.py  pipeline.py
src/attractor/llm/: __init__.py  catalog.py  client.py  types.py
src/attractor/llm/providers/: __init__.py  anthropic.py  base.py  gemini.py  mistral.py  openai.py  openai_adapter.py  vertex.py
